--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,38 @@
 services:
+  db:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: engagement_db
+      POSTGRES_USER: engagement_user
+      POSTGRES_PASSWORD: engagement_password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U engagement_user"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   web:
     build: .
     ports:
       - "8000:8000"
     volumes:
-      - ./db.sqlite3:/app/db.sqlite3
       - .:/app
       - ./logs:/app/logs
     environment:
       - DEBUG=True
       - API_KEY=neuRealities_assessment
+      - DB_NAME=engagement_db
+      - DB_USER=engagement_user
+      - DB_PASSWORD=engagement_password
+      - DB_HOST=db
+      - DB_PORT=5432
+    depends_on:
+      db:
+        condition: service_healthy
+
+volumes:
+  postgres_data:
