--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U engagement_user"]
+      test: ["CMD-SHELL", "pg_isready -U engagement_user -d engagement_db"]
       interval: 10s
       timeout: 5s
       retries: 5
